# starlette-dishka

./: .coveragerc  .gitignore  .mypy.ini  .pytest.ini  .pytest.toml  .ruff.toml  CONTRIBUTING.md  README.md  noxfile.py  pyproject.toml  sgconfig.yml
.github/: dependabot.yml
.github/workflows/: coverage-pr.yml  latest.yml  publish.yml  setup.yml
examples/: app.py  requirements.txt  ruff.toml
linter-rules/: pep8.yaml  type_checking.yaml
src/starlette_dishka/: __init__.py  container.py  integration.py  provider.py
tests/: conftest.py  test_starlette.py  test_starlette_websockets.py
