[build-system]
requires = ["uv_build == 0.9.0"]
build-backend = "uv_build"

[project]
name = "starlette-dishka"
version = "1.0.1"
readme = "README.md"
authors = [
    { name = "Andrey Tikhonov", email = "17@itishka.org" },
]
license = { text = "Apache-2.0" }
description = "Starlette integration for dishka"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries",
    "Typing :: Typed",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Development Status :: 5 - Production/Stable",
]
dependencies = [
    "dishka >= 1.7.1, <2.0.0",
    "starlette >= 0.27.0",
]

[dependency-groups]
dev = [
    "uv == 0.9.*",
    "ruff == 0.14.*",
    "mypy == 1.18.*",
    "zizmor == 1.14.*",
    "nox == 2025.05.01",
]
tests = [
    "pytest == 8.*",
    "pytest-cov == 7.*",
    "pytest-asyncio == 1.2.*",
    "httpx == 0.27.*",
    "asgi-lifespan == 2.1.*",
]

[project.urls]
Source = "https://github.com/reagento/starlette-dishka"
Homepage = "https://github.com/reagento/starlette-dishka"
Download = "https://github.com/reagento/starlette-dishka/#files"
"Bug Tracker" = "https://github.com/reagento/starlette-dishka"
