[build-system]
requires = [
    "setuptools == 80.10.1",
    "setuptools-scm[simple] == 9.2.2",
]
build-backend = "setuptools.build_meta"

[project]
name = "starlette-dishka"
dynamic = ["version"]
readme = "README.md"
authors = [
    { name = "Andrey Tikhonov", email = "17@itishka.org" },
]
license = "Apache-2.0"
license-files = ["LICENSE"]
description = "Starlette integration for dishka"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries",
    "Typing :: Typed",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Development Status :: 5 - Production/Stable",
]
dependencies = [
    "dishka >= 1.7.1, <2.0.0",
    "starlette >= 0.27.0",
]

[dependency-groups]
typos = ["typos == 1.42.1"]
zizmor = ["zizmor == 1.22.0"]
ci = [
    "ruff == 0.14.14",
    "mypy == 1.19.1",
    "nox == 2025.11.12",
]
tests = [
    "pytest == 9.0.2",
    "pytest-cov == 7.0.0",
    "pytest-asyncio == 1.3.0",
    "httpx == 0.27.0",
    "asgi-lifespan == 2.1.0",
]
dev = [
    "uv == 0.9.26",
    { include-group = "ci" },
    { include-group = "typos" },
    { include-group = "zizmor" },
    { include-group = "tests" },
]

[project.urls]
Source = "https://github.com/reagento/starlette-dishka"
Homepage = "https://github.com/reagento/starlette-dishka"
Download = "https://github.com/reagento/starlette-dishka/#files"
"Bug Tracker" = "https://github.com/reagento/starlette-dishka"

[tool.setuptools_scm]
version_file = "src/starlette_dishka/_version.py"
version_file_template = """\
# This file auto generated by `setuptools-scm`!
# DO NOT EDIT MANUALLY !!!

version: str = "{version}"
__version__: str = "{version}"

commit_hash: str = "{scm_version.node}"
version_timestamp: str = "{scm_version.time}"

tag: str = "{scm_version.tag}"
branch: str = "{scm_version.branch}"
commit_date: str = "{scm_version.node_date}"
commit_count_since_tag: int = {scm_version.distance}
"""